# restdb

./: Cargo.toml  rask.yaml  readme.md
.github/workflows/: push.yaml  release.yaml
migrations/: 20240421121316_product.sql
src/: main.rs
src/api/: connection.rs  mod.rs
src/commands/: run.rs
