[package]
name = "restdb"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.12.0"
clap = "4.5.4"
rocket = "0.5.0"
sqlx = { version = "0.7.4", features = ["runtime-async-std"] }

[profile.dev]
opt-level = 0

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
