[package]
name = "restdb"
version = "0.1.0"
edition = "2021"
description = "Turn any database into a restfull API."

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.5.4", features = ["derive", "unicode", "wrap_help"] }
rocket = "0.5.0"
# We're planning to support more than postgres and sqlite in the future.
sqlx = { version = "0.7.4", features = ["runtime-async-std", "postgres", "sqlite"] }

[profile.dev]
opt-level = 0

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
